--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,7 @@
 <div class ="footer">
         <small>
-            <a href="http://onemonthrails.com">One Month Rails<a> is so sexy</a>
+           A demo app for the <a href="http://onemonthrails.com">One Month Rails</a> class.
+            </br> 
+            SEH is the best.
         </small>
     </div>
