--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
 </head>
 <body>
     <%= render 'layouts/header' %>
-
+  <div class="container">
     <%= yield %>
+  <div class="layouts/footer">
      
     <%= render 'layouts/footer' %>
         
