--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,9 @@
-<h1>Welcome to One Month Rails</h1>
-<p>
-    You've found the home page for the <%= link_to "One Month Rails", "http://onemonthrails.com" %> Application.
-</p>
-<p>
-    <%= link_to "Sign Up Now!", "#" %>
-</p>
+<div class="hero-unit">
+    <h1>Welcome to One Month Rails</h1>
+    <p>
+        You've found the home page for the <%= link_to "One Month Rails", "http://onemonthrails.com" %> Application.
+    </p>
+    <p>
+        <%= link_to "Sign Up Now!", "#", class: "btn-primary btn-large"  %>
+    </p>
+</div>
