--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -3,7 +3,7 @@
 @import url(http://fonts.googleapis.com/css?family=Oxygen);
 */
 
-$btnPrimaryBackground: purple;
+$btnPrimaryBackground: green;
 
 
 @import 'bootstrap';
@@ -21,7 +21,7 @@ body{
 
     margin-top: 50px;
     color: $grayLight;
-    a{
+    a {
         color:$gray;
     }
 }
