--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,14 @@
-<div class="hero-unit">
-    <h1>Welcome to One Month Rails</h1>
-    <p>
-        You've found the home page for the <%= link_to "One Month Rails", "http://onemonthrails.com" %> Application.
-    </p>
-    <p>
-        <%= link_to "Sign Up Now!", "#", class: "btn-primary btn-large"  %>
-    </p>
-</div>
+<% if user_signed_in? %>
+<!-- some code -->
+<h1>You're logged in!</h1>
+<%else%>
+    <div class="hero-unit">
+        <h1>Welcome to One Month Rails</h1>
+        <p>
+            You've found the home page for the <%= link_to "One Month Rails", "http://onemonthrails.com" %> Application.
+        </p>
+        <p>
+            <%= link_to "Sign Up Now!", new_user_registration_path, class: "btn-primary btn-large"  %>
+        </p>
+    </div>
+<%end%>
