Add Pins Associations

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,7 @@
         <small>
            A demo app for the <a href="http://onemonthrails.com">One Month Rails</a> class.
             </br> 
-            SEH is the best.
+            SEH is the best.</br>
+           <%= link_to "Pins", pins_path %>
         </small>
     </div>
