--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -1,8 +1,11 @@
 <%= simple_form_for(@pin, html: {class: "form-horizontal"}) do |f| %>
   <%= f.error_notification %>
+  <%= f.full_error :image_file_size, class: "alert alert-error" %>
+    <%= f.full_error :image_content_type, class: "alert alert-error" %>
 
-
+    <%=  f.input :image, label: "Upload image" %>
     <%= f.input :description, as: :text, input_html: {rows: "3"} %>
+
   </div>
 
   <div class="form-actions">
