--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
     <div span="span6 offset3">
             <div class="well">
+                <%= image_tag @pin.image %>
                 <p>
                     <%= @pin.description %>
                 </p>
