--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -5,8 +5,9 @@
                 <p>
                     <%= @pin.description %>
                 </p>
-                <p>
-                    <%= @pin.user.name %>
+                <p><small>
+                    Upload by <%= @pin.user.name %>
+                </small>
                 </p>
                     <% if current_user == @pin.user %> 
                         <%= link_to 'Edit', edit_pin_path(@pin) %> 
