Added jQuery Masonry

--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -6,7 +6,7 @@
                     <%= @pin.description %>
                 </p>
                 <p><small>
-                    Upload by <%= @pin.user.name %>
+                    Uploaded by <%= @pin.user.name %>
                 </small>
                 </p>
                     <% if current_user == @pin.user %> 
